--- a/MyAppAuto/Config/config.ini
+++ b/MyAppAuto/Config/config.ini
@@ -15,4 +15,4 @@ smtpsever=smtp.exmail.qq.com
 password=xxxxuser=837897553@qq.com
 
 sender=837897553@qq.com
-receiver=luyefei@tuhu.cn
+receiver=luyefei92@gmail.com
